# Taprebook

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
dashboards/: streamlit_app.py
data/sample/: ab_assignments.csv  appointments.csv  clinics.csv  events.csv  patients.csv  template_sends.csv  templates.csv
docs/: architecture.md  event_schema.md  kpi_definitions.md
docs/artifacts/: google_sheets_etl.sql  onboarding_checklist.md  pricing.md  service_cards.md
scripts/: init_db.py  run_all_kpis.py
sql/: 001_schema.sql  002_indexes.sql  003_views.sql
sql/queries/: ab_test_reminder_cadence.sql  cohort_recall.sql  funnel_conversion.sql  monthly_kpi_summary.sql  no_show_rate_monthly.sql  template_health.sql
taprebook/: __init__.py  config.py  db.py
taprebook/api/: __init__.py  interakt_client.py
taprebook/data_gen/: __init__.py  generate.py
taprebook/etl/: __init__.py  extract.py  load.py  run_pipeline.py  transform.py
taprebook/experiments/: __init__.py  ab_reminder_cadence.py
taprebook/triage/: __init__.py  classifier.py
templates/: whatsapp_templates_en.csv  whatsapp_templates_mal.csv
tests/: test_pipeline.py  test_transform.py  test_triage.py
