[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taprebook"
version = "0.2.0"
description = "Analytics and orchestration layer for TapRebook, a WhatsApp-based clinic CRM (Kochi, 2025)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Sunil" }]
keywords = ["whatsapp", "crm", "clinic", "etl", "analytics", "sql"]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
]

[project.optional-dependencies]
llm = ["anthropic>=0.34.0"]
dashboard = ["streamlit>=1.30", "plotly>=5.18"]
dev = ["pytest>=7.4", "black>=24.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
include = ["taprebook*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
